--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ananya Pandey</span><br> Student | HTML • CSS • JS Explorer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
@@ -148,6 +148,34 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
+
+                    <!-- Your Generator Bidding Project -->
+ <!-- 🎯 New Project: Generator Bidding Behaviour Analysis -->
+  <div class="work__img">
+    <img src="assets/img/generator_bidding_cover.png" alt="Generator Bidding Analysis">
+    <div style="padding: 0.5rem;">
+      <h3 style="margin: 0; color: #003366;">Generator Bidding Behaviour Analysis (NEM 2025)</h3>
+      <p style="font-size: 0.9rem;">
+        Data-driven insights into renewable vs. fossil-fuel bidding patterns in Australia's energy market.
+      </p>
+      <div style="margin-top: 0.5rem;">
+        <a href="https://github.com/Anan2324/My_Portfolio" class="button" target="_blank">🔗 GitHub</a>
+        <a href="notebooks/bidding_analysis.ipynb" class="button" target="_blank">📒 Notebook</a>
+        <a href="report/NEM_Bidding_Report.pdf" class="button" target="_blank">📄 Report</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- 👇 Existing work thumbnails -->
+  <a href="#" class="work__img">
+    <img src="assets/img/work2.jpg" alt="Project 2">
+  </a>
+  <a href="#" class="work__img">
+    <img src="assets/img/work3.jpg" alt="Project 3">
+  </a>
+
+</div>
+
                     <a href="" class="work__img">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
